--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -211,16 +211,18 @@
    <TitledPane animated="false" collapsible="false" layoutX="7.0" layoutY="33.0" minHeight="371.0" minWidth="378.0" prefHeight="364.0" prefWidth="378.0" text="Main settings">
       <fx:include fx:id="general" source="general.fxml" />
    </TitledPane>
-   <TitledPane animated="false" collapsible="false" layoutX="391.0" layoutY="607.0" prefHeight="138.0" prefWidth="610.0" text="Image settings">
-      <fx:include fx:id="image" source="image.fxml" />
-   </TitledPane>
-   <TitledPane animated="false" collapsible="false" layoutX="392.0" layoutY="33.0" prefHeight="569.0" prefWidth="610.0" text="Audio Effects">
+   <AnchorPane fx:id="frequencyPane" layoutX="392.0" layoutY="692.0" prefHeight="53.0" prefWidth="610.0">
+      <children>
+         <fx:include fx:id="image" layoutX="34.0" source="image.fxml" />
+      </children>
+   </AnchorPane>
+   <TitledPane animated="false" collapsible="false" layoutX="392.0" layoutY="33.0" prefHeight="652.0" prefWidth="610.0" text="Audio Effects">
       <fx:include fx:id="effects" source="effects.fxml" />
    </TitledPane>
    <TitledPane fx:id="objTitledPane" animated="false" collapsible="false" layoutX="7.0" layoutY="411.0" prefHeight="334.0" prefWidth="378.0" text="3D .obj file settings">
       <fx:include fx:id="obj" source="obj.fxml" />
    </TitledPane>
-    <TitledPane fx:id="luaTitledPane" animated="false" collapsible="false" layoutX="7.0" layoutY="411.0" prefHeight="334.0" prefWidth="464.0" text=".lua file settings" visible="false">
+    <TitledPane fx:id="luaTitledPane" animated="false" collapsible="false" layoutX="7.0" layoutY="411.0" prefHeight="334.0" prefWidth="378.0" text=".lua file settings" visible="false">
         <fx:include fx:id="lua" source="lua.fxml" />
     </TitledPane>
 </AnchorPane>
