--- a/src/main/resources/fxml/effectComponentGroup.fxml
+++ b/src/main/resources/fxml/effectComponentGroup.fxml
@@ -6,18 +6,20 @@
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.shape.SVGPath?>
 
-<fx:root alignment="TOP_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="41.0" prefWidth="601.0" type="HBox" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sh.ball.gui.components.EffectComponentGroupController">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="41.0" prefWidth="601.0" type="HBox" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sh.ball.gui.components.EffectComponentGroupController">
    <children>
-      <CheckBox fx:id="effectCheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="128.0" text="Vector cancel">
+      <Region prefHeight="0.0" prefWidth="5.0" />
+      <CheckBox fx:id="effectCheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="125.0" text="Vector cancel">
          <HBox.margin>
-            <Insets left="5.0" top="5.0" />
+            <Insets top="5.0" />
          </HBox.margin>
       </CheckBox>
       <Slider fx:id="slider" blockIncrement="0.005" disable="true" majorTickUnit="0.1" max="1.0" prefHeight="42.0" prefWidth="208.0" showTickLabels="true" showTickMarks="true" value="0.11111111">
          <HBox.margin>
-            <Insets right="5.0" />
+            <Insets right="2.0" />
          </HBox.margin>
       </Slider>
       <Spinner fx:id="spinner" disable="true" editable="true" prefHeight="26.0" prefWidth="66.0">
@@ -27,12 +29,12 @@
       </Spinner>
       <SVGPath fx:id="midi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" pickOnBounds="true">
          <HBox.margin>
-            <Insets left="5.0" right="5.0" top="11.0" />
+            <Insets left="3.0" right="3.0" top="11.0" />
          </HBox.margin>
       </SVGPath>
       <ComboBox fx:id="comboBox" prefHeight="26.0" prefWidth="102.0">
          <HBox.margin>
-            <Insets right="5.0" />
+            <Insets right="3.0" />
          </HBox.margin>
       </ComboBox>
       <CheckBox fx:id="micCheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="52.0" text="Mic">
