--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -21,7 +21,7 @@
      <menus>
        <Menu mnemonicParsing="false" text="File">
             <items>
-               <MenuItem disable="true" mnemonicParsing="false" text="osci-render v1.26.3" />
+               <MenuItem disable="true" mnemonicParsing="false" text="osci-render v1.26.4" />
                <MenuItem fx:id="openProjectMenuItem" mnemonicParsing="false" text="Open Project">
                   <accelerator>
                      <KeyCodeCombination alt="UP" code="O" control="UP" meta="UP" shift="UP" shortcut="DOWN" />
@@ -152,6 +152,7 @@
                <CheckMenuItem fx:id="flipXCheckMenuItem" mnemonicParsing="false" text="Flip X Direction" />
                <CheckMenuItem fx:id="flipYCheckMenuItem" mnemonicParsing="false" text="Flip Y Direction" />
                <CheckMenuItem fx:id="hideHiddenMeshesCheckMenuItem" mnemonicParsing="false" text="Hide Hidden Meshes" />
+               <CheckMenuItem fx:id="renderUsingGpuCheckMenuItem" mnemonicParsing="false" text="Render Using GPU" />
            </items>
          </Menu>
          <Menu mnemonicParsing="false" text="Controls">
