--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -212,7 +212,7 @@
    <TitledPane animated="false" collapsible="false" layoutX="7.0" layoutY="33.0" minHeight="371.0" minWidth="378.0" prefHeight="364.0" prefWidth="378.0" text="Main settings">
       <fx:include fx:id="general" source="general.fxml" />
    </TitledPane>
-   <AnchorPane fx:id="frequencyPane" layoutX="392.0" layoutY="692.0" prefHeight="53.0" prefWidth="610.0">
+   <AnchorPane fx:id="frequencyPane" layoutX="392.0" layoutY="692.0" prefHeight="53.0" prefWidth="610.0" styleClass="darkPane">
       <children>
          <fx:include fx:id="image" layoutX="34.0" source="image.fxml" />
       </children>
