--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -375,3 +375,14 @@
 .label.title .text {
     -fx-font-size: 1.5em;
 }
+
+.text-area .content {
+    -fx-background-color: very_dark;
+}
+
+.text-area {
+    -fx-background-color: very_dark;
+    -fx-border-width: 1px;
+    -fx-border-radius: 0;
+    -fx-border-color: white;
+}
