--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -386,3 +386,9 @@
     -fx-border-radius: 0;
     -fx-border-color: white;
 }
+
+.white-border {
+    -fx-border-width: 1px;
+    -fx-border-radius: 0;
+    -fx-border-color: white;
+}
