--- a/src/main/resources/fxml/projectSelect.fxml
+++ b/src/main/resources/fxml/projectSelect.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
@@ -17,12 +19,27 @@
                <Image url="@../images/osci.png" />
             </image>
          </ImageView>
-         <ListView fx:id="recentFilesListView" layoutX="28.0" layoutY="333.0" prefHeight="257.0" prefWidth="527.0" />
+         <ListView fx:id="recentFilesListView" layoutX="28.0" layoutY="333.0" prefHeight="257.0" prefWidth="527.0" styleClass="darkPane" >
+            <placeholder>
+               <Label text="No recent projects. Start a new project below." />
+            </placeholder>
+         </ListView>
          <Button fx:id="newProjectButton" layoutX="222.0" layoutY="609.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="131.0" text="Start new project" />
          <CheckBox fx:id="startMutedCheckBox" layoutX="240.0" layoutY="670.0" mnemonicParsing="false" text="Start muted" />
          <Label layoutX="188.0" layoutY="294.0" styleClass="title" text="Recently opened projects" />
          <Label layoutX="14.0" layoutY="700.0" text="v1.26.4" />
-         <Label layoutX="727.0" layoutY="40.0" styleClass="title" text="Changelog" />
-         <WebView fx:id="changelogWebView" layoutX="583.0" layoutY="104.0" prefHeight="590.0" prefWidth="376.0" />
+         <Label layoutX="727.0" layoutY="20.0" styleClass="title" text="Changelog" />
+         <AnchorPane layoutX="582.0" layoutY="65.0" prefHeight="200.0" prefWidth="376.0">
+            <children>
+               <WebView fx:id="changelogWebView" layoutX="2.0" layoutY="2.0" prefHeight="638.0" prefWidth="376.0" />
+            </children>
+            <opaqueInsets>
+               <Insets />
+            </opaqueInsets>
+            <styleClass>
+               <String fx:value="white-border" />
+               <String fx:value="darkPane" />
+            </styleClass>
+         </AnchorPane>
       </children></AnchorPane>
 </AnchorPane>
