--- a/src/main/resources/fxml/projectSelect.fxml
+++ b/src/main/resources/fxml/projectSelect.fxml
@@ -14,19 +14,19 @@
 <AnchorPane prefHeight="752.0" prefWidth="1008.0" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sh.ball.gui.controller.ProjectSelectController">
    <AnchorPane layoutX="11.0" layoutY="12.0" prefHeight="727.0" prefWidth="984.0" styleClass="darkPane">
       <children>
-         <ImageView fitHeight="247.0" fitWidth="252.0" layoutX="162.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+         <ImageView fitHeight="247.0" fitWidth="252.0" layoutX="162.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
             <image>
                <Image url="@../images/osci.png" />
             </image>
          </ImageView>
-         <ListView fx:id="recentFilesListView" layoutX="28.0" layoutY="333.0" prefHeight="257.0" prefWidth="527.0" styleClass="darkPane" >
+         <ListView fx:id="recentFilesListView" layoutX="28.0" layoutY="286.0" prefHeight="257.0" prefWidth="527.0" styleClass="darkPane">
             <placeholder>
                <Label text="No recent projects. Start a new project below." />
             </placeholder>
          </ListView>
-         <Button fx:id="newProjectButton" layoutX="222.0" layoutY="609.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="131.0" text="Start new project" />
-         <CheckBox fx:id="startMutedCheckBox" layoutX="240.0" layoutY="670.0" mnemonicParsing="false" text="Start muted" />
-         <Label layoutX="188.0" layoutY="294.0" styleClass="title" text="Recently opened projects" />
+         <Button fx:id="newProjectButton" layoutX="222.0" layoutY="562.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="131.0" text="Start new project" />
+         <CheckBox fx:id="startMutedCheckBox" layoutX="240.0" layoutY="623.0" mnemonicParsing="false" text="Start muted" />
+         <Label layoutX="188.0" layoutY="247.0" styleClass="title" text="Recently opened projects" />
          <Label layoutX="14.0" layoutY="700.0" text="v1.26.4" />
          <Label layoutX="727.0" layoutY="20.0" styleClass="title" text="Changelog" />
          <AnchorPane layoutX="582.0" layoutY="65.0" prefHeight="200.0" prefWidth="376.0">
@@ -41,5 +41,6 @@
                <String fx:value="darkPane" />
             </styleClass>
          </AnchorPane>
+         <Label layoutX="108.0" layoutY="679.0" prefHeight="40.0" prefWidth="379.0" text="Email me at james@ball.sh or create an issue on GitHub for feature suggestions, issues, or opportunites I might be interested in!" textAlignment="CENTER" wrapText="true" />
       </children></AnchorPane>
 </AnchorPane>
