--- a/src/main/resources/fxml/obj.fxml
+++ b/src/main/resources/fxml/obj.fxml
@@ -2,31 +2,15 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.SVGPath?>
+<?import sh.ball.gui.components.EffectComponentGroup?>
 
-<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="313.0" prefWidth="378.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sh.ball.gui.controller.ObjController">
-    <Slider fx:id="focalLengthSlider" blockIncrement="0.01" layoutX="99.0" layoutY="16.0" majorTickUnit="0.2" max="2.0" min="1.0E-5" prefHeight="42.0" prefWidth="190.0" showTickLabels="true" showTickMarks="true" value="1.0" />
-    <Label layoutX="24.0" layoutY="15.0" text="Focal length" />
-    <Slider fx:id="objectXRotateSlider" blockIncrement="0.005" layoutX="99.0" layoutY="65.0" majorTickUnit="0.2" max="1.0" min="-1.0" prefHeight="42.0" prefWidth="190.0" showTickLabels="true" showTickMarks="true" value="1.0" />
-    <Label layoutX="44.0" layoutY="65.0" text="Rotate x" />
+<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="306.0" prefWidth="378.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sh.ball.gui.controller.ObjController">
     <CheckBox fx:id="rotateCheckBox" layoutX="133.0" layoutY="264.0" mnemonicParsing="false" text="Rotate with Mouse (Esc to disable)" />
-    <SVGPath fx:id="focalLengthMidi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" layoutX="290.0" layoutY="13.0" pickOnBounds="true" />
-    <SVGPath fx:id="objectXRotateMidi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" layoutX="290.0" layoutY="62.0" pickOnBounds="true" />
-   <CheckBox fx:id="objectXRotateMic" layoutX="317.0" layoutY="65.0" mnemonicParsing="false" text="Mic" />
    <Button fx:id="resetObjectRotationButton" layoutX="16.0" layoutY="260.0" mnemonicParsing="false" text="Reset Rotation" />
-   <Slider fx:id="objectYRotateSlider" blockIncrement="0.005" layoutX="99.0" layoutY="114.0" majorTickUnit="0.2" max="1.0" min="-1.0" prefHeight="42.0" prefWidth="190.0" showTickLabels="true" showTickMarks="true" value="1.0" />
-   <Label layoutX="44.0" layoutY="114.0" text="Rotate y" />
-   <SVGPath fx:id="objectYRotateMidi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" layoutX="290.0" layoutY="111.0" pickOnBounds="true" />
-   <CheckBox fx:id="objectYRotateMic" layoutX="317.0" layoutY="114.0" mnemonicParsing="false" text="Mic" />
-   <Slider fx:id="objectZRotateSlider" blockIncrement="0.005" layoutX="99.0" layoutY="162.0" majorTickUnit="0.2" max="1.0" min="-1.0" prefHeight="42.0" prefWidth="190.0" showTickLabels="true" showTickMarks="true" />
-   <Label layoutX="44.0" layoutY="162.0" text="Rotate z" />
-   <SVGPath fx:id="objectZRotateMidi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" layoutX="290.0" layoutY="159.0" pickOnBounds="true" />
-   <CheckBox fx:id="objectZRotateMic" layoutX="317.0" layoutY="162.0" mnemonicParsing="false" text="Mic" />
-   <Slider fx:id="objectRotateSpeedSlider" blockIncrement="0.005" layoutX="99.0" layoutY="209.0" majorTickUnit="0.2" max="1.0" min="-1.0" prefHeight="42.0" prefWidth="190.0" showTickLabels="true" showTickMarks="true" />
-   <Label layoutX="19.0" layoutY="209.0" text="Rotate speed" />
-   <SVGPath fx:id="objectRotateSpeedMidi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" layoutX="290.0" layoutY="206.0" pickOnBounds="true" />
-   <CheckBox fx:id="objectRotateSpeedMic" layoutX="317.0" layoutY="209.0" mnemonicParsing="false" text="Mic" />
+   <EffectComponentGroup fx:id="rotateX" type="OBJ_ROTATE_X" alwaysEnabled="true" increment="0.01" label="objectXRotate" layoutX="6.0" layoutY="58.0" majorTickUnit="0.4" max="1.0" maxHeight="-Infinity" maxWidth="-Infinity" min="-1.0" minHeight="-Infinity" minWidth="-Infinity" name="Rotate x" prefHeight="42.0" prefWidth="370.0" spinnerHidden="true" value="0.0" />
+   <EffectComponentGroup fx:id="rotateY" type="OBJ_ROTATE_Y" alwaysEnabled="true" increment="0.01" label="objectYRotate" layoutX="6.0" layoutY="108.0" majorTickUnit="0.4" max="1.0" maxHeight="-Infinity" maxWidth="-Infinity" min="-1.0" minHeight="-Infinity" minWidth="-Infinity" name="Rotate y" prefHeight="42.0" prefWidth="370.0" spinnerHidden="true" value="0.0" />
+   <EffectComponentGroup fx:id="rotateZ" type="OBJ_ROTATE_Z" alwaysEnabled="true" increment="0.01" label="objectZRotate" layoutX="6.0" layoutY="156.0" majorTickUnit="0.4" max="1.0" maxHeight="-Infinity" maxWidth="-Infinity" min="-1.0" minHeight="-Infinity" minWidth="-Infinity" name="Rotate z" prefHeight="42.0" prefWidth="370.0" spinnerHidden="true" value="0.0" />
+   <EffectComponentGroup fx:id="focalLength" type="FOCAL_LENGTH" alwaysEnabled="true" increment="0.01" label="focalLength" layoutX="6.0" layoutY="10.0" majorTickUnit="0.4" max="2.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" name="Focal length" prefHeight="42.0" prefWidth="370.0" spinnerHidden="true" value="1.0" />
+   <EffectComponentGroup fx:id="rotateSpeed" type="OBJ_ROTATE_SPEED" alwaysEnabled="true" increment="0.01" label="objectRotateSpeed" layoutX="6.0" layoutY="206.0" majorTickUnit="0.4" max="1.0" maxHeight="-Infinity" maxWidth="-Infinity" min="-1.0" minHeight="-Infinity" minWidth="-Infinity" name="Rotate speed" prefHeight="42.0" prefWidth="370.0" spinnerHidden="true" />
 </AnchorPane>
