--- a/src/main/resources/fxml/lua.fxml
+++ b/src/main/resources/fxml/lua.fxml
@@ -1,32 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.SVGPath?>
+<?import sh.ball.gui.components.EffectComponentGroup?>
 
 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="313.0" prefWidth="378.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sh.ball.gui.controller.LuaController">
-    <Slider fx:id="luaASlider" blockIncrement="0.01" layoutX="78.0" layoutY="16.0" majorTickUnit="0.1" max="1.0" prefHeight="42.0" prefWidth="190.0" showTickLabels="true" showTickMarks="true" value="1.0" />
-    <Label layoutX="26.0" layoutY="16.0" text="Slider a" />
-    <SVGPath fx:id="luaAMidi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" layoutX="274.0" layoutY="13.0" pickOnBounds="true" />
-    <SVGPath fx:id="luaBMidi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" layoutX="274.0" layoutY="62.0" pickOnBounds="true" />
-   <CheckBox fx:id="luaBMic" layoutX="311.0" layoutY="65.0" mnemonicParsing="false" text="Mic" />
    <Button fx:id="resetStepCounterButton" layoutX="130.0" layoutY="261.0" mnemonicParsing="false" text="Reset Step Counter" />
-   <SVGPath fx:id="luaCMidi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" layoutX="274.0" layoutY="111.0" pickOnBounds="true" />
-   <CheckBox fx:id="luaCMic" layoutX="311.0" layoutY="114.0" mnemonicParsing="false" text="Mic" />
-   <SVGPath fx:id="luaDMidi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" layoutX="274.0" layoutY="159.0" pickOnBounds="true" />
-   <CheckBox fx:id="luaDMic" layoutX="311.0" layoutY="162.0" mnemonicParsing="false" text="Mic" />
-   <SVGPath fx:id="luaEMidi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" layoutX="274.0" layoutY="206.0" pickOnBounds="true" />
-   <CheckBox fx:id="luaEMic" layoutX="311.0" layoutY="209.0" mnemonicParsing="false" text="Mic" />
-   <Label layoutX="26.0" layoutY="65.0" text="Slider b" />
-   <Label layoutX="26.0" layoutY="114.0" text="Slider c" />
-   <Label layoutX="25.0" layoutY="162.0" text="Slider d" />
-   <Label layoutX="26.0" layoutY="209.0" text="Slider e" />
-   <CheckBox fx:id="luaAMic" layoutX="311.0" layoutY="16.0" mnemonicParsing="false" text="Mic" />
-   <Slider fx:id="luaBSlider" blockIncrement="0.01" layoutX="78.0" layoutY="65.0" majorTickUnit="0.1" max="1.0" prefHeight="42.0" prefWidth="190.0" showTickLabels="true" showTickMarks="true" value="1.0" />
-   <Slider fx:id="luaCSlider" blockIncrement="0.01" layoutX="78.0" layoutY="114.0" majorTickUnit="0.1" max="1.0" prefHeight="42.0" prefWidth="190.0" showTickLabels="true" showTickMarks="true" value="1.0" />
-   <Slider fx:id="luaDSlider" blockIncrement="0.01" layoutX="78.0" layoutY="162.0" majorTickUnit="0.1" max="1.0" prefHeight="42.0" prefWidth="190.0" showTickLabels="true" showTickMarks="true" value="1.0" />
-   <Slider fx:id="luaESlider" blockIncrement="0.01" layoutX="78.0" layoutY="209.0" majorTickUnit="0.1" max="1.0" prefHeight="42.0" prefWidth="190.0" showTickLabels="true" showTickMarks="true" value="1.0" />
+   <EffectComponentGroup fx:id="luaA" alwaysEnabled="true" increment="0.005" label="luaA" layoutX="6.0" layoutY="12.0" majorTickUnit="0.2" max="1.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" name="Slider a" prefHeight="42.0" prefWidth="370.0" spinnerHidden="true" type="LUA_A" value="1.0" />
+   <EffectComponentGroup fx:id="luaB" alwaysEnabled="true" increment="0.005" label="luaB" layoutX="6.0" layoutY="61.0" majorTickUnit="0.2" max="1.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" name="Slider b" prefHeight="42.0" prefWidth="370.0" spinnerHidden="true" type="LUA_B" value="1.0" />
+   <EffectComponentGroup fx:id="luaC" alwaysEnabled="true" increment="0.005" label="luaC" layoutX="5.0" layoutY="110.0" majorTickUnit="0.2" max="1.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" name="Slider c" prefHeight="42.0" prefWidth="370.0" spinnerHidden="true" type="LUA_C" value="1.0" />
+   <EffectComponentGroup fx:id="luaD" alwaysEnabled="true" increment="0.005" label="luaD" layoutX="5.0" layoutY="161.0" majorTickUnit="0.2" max="1.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" name="Slider d" prefHeight="42.0" prefWidth="370.0" spinnerHidden="true" type="LUA_D" value="1.0" />
+   <EffectComponentGroup fx:id="luaE" alwaysEnabled="true" increment="0.005" label="luaE" layoutX="5.0" layoutY="211.0" majorTickUnit="0.2" max="1.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" name="Slider e" prefHeight="42.0" prefWidth="370.0" spinnerHidden="true" type="LUA_E" value="1.0" />
 </AnchorPane>
