--- a/src/main/resources/fxml/projectSelect.fxml
+++ b/src/main/resources/fxml/projectSelect.fxml
@@ -9,39 +9,68 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.web.WebView?>
 
 <AnchorPane prefHeight="752.0" prefWidth="1046.0" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sh.ball.gui.controller.ProjectSelectController">
-   <AnchorPane layoutX="11.0" layoutY="12.0" prefHeight="727.0" prefWidth="1023.0" styleClass="darkPane">
+   <AnchorPane layoutX="11.0" layoutY="12.0" prefHeight="727.0" prefWidth="1023.0" styleClass="darkPane" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="12.0" AnchorPane.topAnchor="12.0">
       <children>
-         <ImageView fitHeight="247.0" fitWidth="252.0" layoutX="162.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-               <Image url="@../images/osci.png" />
-            </image>
-         </ImageView>
-         <ListView fx:id="recentFilesListView" layoutX="28.0" layoutY="286.0" prefHeight="257.0" prefWidth="527.0" styleClass="darkPane">
-            <placeholder>
-               <Label text="No recent projects. Start a new project below." />
-            </placeholder>
-         </ListView>
-         <Button fx:id="newProjectButton" layoutX="222.0" layoutY="562.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="131.0" text="Start new project" />
-         <CheckBox fx:id="startMutedCheckBox" layoutX="240.0" layoutY="623.0" mnemonicParsing="false" text="Start muted" />
-         <Label layoutX="188.0" layoutY="247.0" styleClass="title" text="Recently opened projects" />
-         <Label layoutX="14.0" layoutY="700.0" text="v1.28.5" />
-         <Label layoutX="752.0" layoutY="19.0" styleClass="title" text="Changelog" />
-         <AnchorPane layoutX="582.0" layoutY="65.0" prefHeight="200.0" prefWidth="380.0">
+         <HBox alignment="TOP_CENTER" layoutX="-3.0" prefHeight="693.0" prefWidth="992.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="0.0">
             <children>
-               <WebView fx:id="changelogWebView" layoutX="2.0" layoutY="2.0" prefHeight="644.0" prefWidth="422.0" />
+               <VBox alignment="CENTER" prefHeight="603.0" prefWidth="563.0" spacing="20.0" HBox.hgrow="ALWAYS">
+                  <children>
+                     <VBox fx:id="imageVBox" alignment="TOP_CENTER" minHeight="10.0" minWidth="0.0" prefHeight="200.0" prefWidth="527.0">
+                        <children>
+                           <ImageView fitHeight="200.0" fitWidth="${imageVBox.height}" pickOnBounds="true" preserveRatio="true" VBox.vgrow="NEVER">
+                              <image>
+                                 <Image url="@../images/osci.png" />
+                              </image>
+                           </ImageView>
+                        </children>
+                     </VBox>
+                     <Label styleClass="title" text="Recently opened projects">
+                        <VBox.margin>
+                           <Insets top="-20.0" />
+                        </VBox.margin>
+                     </Label>
+                     <ListView fx:id="recentFilesListView" prefHeight="257.0" prefWidth="527.0" styleClass="darkPane" VBox.vgrow="ALWAYS">
+                        <placeholder>
+                           <Label text="No recent projects. Start a new project below." />
+                        </placeholder>
+                     </ListView>
+                     <Button fx:id="newProjectButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="131.0" text="Start new project" />
+                     <CheckBox fx:id="startMutedCheckBox" mnemonicParsing="false" text="Start muted" />
+                     <HBox alignment="CENTER" spacing="20.0">
+                        <children>
+                           <Label minWidth="42.0" prefHeight="18.0" prefWidth="42.0" text="v1.28.5" />
+                           <Label prefHeight="54.0" prefWidth="379.0" text="Email me at james@ball.sh or create an issue on GitHub for feature suggestions, issues, or opportunites I might be interested in!" textAlignment="CENTER" wrapText="true" />
+                           <Button fx:id="logButton" minWidth="102.0" mnemonicParsing="false" prefWidth="102.0" text="Open log folder" />
+                        </children>
+                     </HBox>
+                  </children>
+               </VBox>
+               <VBox alignment="TOP_CENTER" prefHeight="715.0" prefWidth="422.0" spacing="20.0" HBox.hgrow="ALWAYS">
+                  <children>
+                     <Label styleClass="title" text="Changelog" />
+                     <AnchorPane prefHeight="679.0" prefWidth="442.0" VBox.vgrow="ALWAYS">
+                        <children>
+                           <WebView fx:id="changelogWebView" layoutX="-30.0" layoutY="-17.0" minWidth="50.0" prefHeight="719.0" prefWidth="525.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                        </children>
+                        <opaqueInsets>
+                           <Insets />
+                        </opaqueInsets>
+                        <styleClass>
+                           <String fx:value="white-border" />
+                           <String fx:value="darkPane" />
+                        </styleClass>
+                     </AnchorPane>
+                  </children>
+                  <padding>
+                     <Insets bottom="15.0" top="20.0" />
+                  </padding>
+               </VBox>
             </children>
-            <opaqueInsets>
-               <Insets />
-            </opaqueInsets>
-            <styleClass>
-               <String fx:value="white-border" />
-               <String fx:value="darkPane" />
-            </styleClass>
-         </AnchorPane>
-         <Label layoutX="66.0" layoutY="679.0" prefHeight="40.0" prefWidth="379.0" text="Email me at james@ball.sh or create an issue on GitHub for feature suggestions, issues, or opportunites I might be interested in!" textAlignment="CENTER" wrapText="true" />
-         <Button fx:id="logButton" layoutX="458.0" layoutY="686.0" mnemonicParsing="false" text="Open log folder" />
+         </HBox>
       </children></AnchorPane>
 </AnchorPane>
